2003-05-29  Nick Clifton  <nickc@redhat.com>

	* configure.in: Add i386-*-freebsd* entry.
	* configure: Regenerate.

2003-05-29  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>
	
        * config/tc-m32r.c: Amend comment to refer to Renesas

2003-05-27  Richard Henderson  <rth@redhat.com>

	* expr.c (make_expr_symbol): Fold FAKE_LABEL_NAME use into the
	symbol_create call.
	(current_location): Use symbol_temp_new_now.
	* stabs.c (s_stab_generic): Use symbol_temp_new.
	* symbols.c (temp_label_name): Remove.
	(symbol_temp_new, symbol_temp_make): Use FAKE_LABEL_NAME.

2003-05-27  Richard Henderson  <rth@redhat.com>

	* dw2gencfi.c, dw2gencfi.h: Rewrite from scratch.
	* as.c (main): Always call cfi_finish.
	* config/tc-i386.c (x86_dwarf2_return_column): New.
	(x86_cie_data_alignment): New.
	(md_begin): Set them.
	(tc_x86_cfi_init): Remove.
	(tc_x86_regname_to_dw2regnum): Fix 32-bit register numbers;
	return int, not unsigned long; don't as_bad here.
	(tc_x86_frame_initial_instructions): Streamline; use
	updated api.
	* config/tc-i386.h (tc_cfi_init): Remove.
	(DWARF2_DEFAULT_RETURN_COLUMN): New.
	(DWARF2_CIE_DATA_ALIGNMENT): New.

2003-05-27  Richard Henderson  <rth@redhat.com>

	* symbols.c (temp_label_name): New.
	(symbol_temp_new, symbol_temp_new_now, symbol_temp_make): New.
	(symbol_set_value_now): New.
	* symbols.h: Prototype them.
	* dwarf2dbg.c: Use them.
	(fake_label_name, symbol_new_now, set_symbol_value_now): Remove.

2003-05-23  Jason Eckhardt  <jle@rice.edu>

	* config/tc-i860.c (target_xp): Declare variable.
	(OPTION_XP): Declare macro.
	(md_longopts): Add option -mxp.
	(md_parse_option): Set target_xp.
	(md_show_usage): Add -mxp usage.
	(i860_process_insn): Recognize XP registers bear, ccr, p0-p3.
	(md_assemble): Don't try expansions if XP_ONLY is set.
	* doc/c-i860.texi: Document -mxp option and i860XP support.

2003-05-23  Eric Christopher  <echristo@redhat.com>

	* config/tc-mips.c (macro_build_jalr): Warning patrol.
