@@ -1,3 +1,10 @@
+2003-05-29  Richard Henderson  <rth@redhat.com>
+
+	* gas/alpha/elf-reloc-8.d: Add .eh_frame relocs.
+	* gas/cfi/cfi-alpha-1.d: New.
+	* gas/cfi/cfi-alpha-1.s: New.
+	* gas/cfi/cfi.exp: Run it.
+
 2003-05-27  Richard Henderson  <rth@redhat.com>
 
 	* gas/cfi/cfi-i386.d: Update for dw2gencfi rewrite.
